# hosts-switch

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/release/: manual-validation-v0.1.10.md  manual-validation-v0.1.10.result.json  manual-validation-v0.1.11.md  manual-validation-v0.1.11.result.json  manual-validation-v0.1.12.md  manual-validation-v0.1.12.result.json  manual-validation-v0.1.13.md  manual-validation-v0.1.13.result.json  manual-validation-v0.1.14.md  manual-validation-v0.1.14.result.json  manual-validation-v0.1.15.md  manual-validation-v0.1.15.result.json  manual-validation-v0.1.16.md  manual-validation-v0.1.17.md  (+26 more)
scripts/: generate-icons.swift  prepare-manual-release-asset.js  prepare-manual-validation.js  print-hosts-recovery.js  record-manual-validation-result.js  render-release-notes.js  sync-manual-release-metadata.js  verify-dmg-contents.js  verify-macos-bundle.js  verify-manual-readiness.js  verify-manual-recording-help.js  verify-manual-validation-result.js  verify-manual-validation-template.js  verify-release-assets.js  verify-release-notes.js  verify-release-version.js
src/: App.tsx  api.ts  hostsPreview.ts  styles.css  systemPreferenceHydration.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  hosts.rs  lib.rs  main.rs  models.rs  store.rs  tray_switch.rs
tests/: browser-smoke.spec.ts  systemPreferenceHydration.spec.ts
(+2 files in other folders)
